--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
     font-family: 'Roboto Slab', serif;
 }
+h1 {
+    font-size: 35px;
+}
+@media screen and (max-width: 1250px) {
+    h1 {
+        font-size: 25px;
+    }
+}
